fix Alignment

--- a/assets/styles/partials/_userPresentation.scss
+++ b/assets/styles/partials/_userPresentation.scss
@@ -7,7 +7,7 @@ $techzara-blue : #29AAE3;
 .user-card-informations{
   max-width: $picture-w + 50px;
   row-gap: 15px;
-  height: 300px;
+  height: 330px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
